# robomath

./: .gitignore  Cargo.toml  LICENSE  README.md  tarpaulin-report.html
.github/workflows/: coverage.yml  test.yml
src/: lib.rs  mat3x3.rs  quaternion.rs  tests.rs  vec2.rs  vec3.rs
src/mat3x3/: tests.rs
src/quaternion/: tests.rs
src/vec2/: tests.rs
src/vec3/: tests.rs
